--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -343,7 +343,7 @@
         сюда автоматически, и они даже будут работать. Между прочим, для тех кто не любит держать Jabber-подключение
         постоянно, существует опция \'скачать блеклисты и отключиться\'
     </string>
-    <string name="ClickToReply">Нажать здесь</string>
+    <string name="ClickToReply">Отвечать тут</string>
     <string name="OtherImages">Картинки из прочих урлов</string>
     <string name="OtherImages2">..помимо картинок с juick.com</string>
     <string name="Message_numbers_will_be_shown">..будут показаны, а также номера комментариев</string>
