--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -312,10 +312,11 @@
             <form>
             <b>5 декабря 2012</b>
             <li>
-            Нотификация о сообщениях <b>без XMPP/Jabber!</b>. На juick advanced сервере трекаются все комментарии и новые мессаги,
-            приходящие с официального juick сервера. Затем по известным правилам уведомления рассылаются всем заинтересованным устройствам.
-            Исключение составляют приватные сообщения. Важно понять, что подписка на произвольный тред, сделанная НЕ через juick advanced,
-            не будет приходить, т.к. не существует способа для сторонних серверов узнавать таковые подробности с
+            Нотификация о сообщениях <b>без XMPP/Jabber!</b>. На juick advanced сервере (не путать с официальным juick сервером) трекаются
+            все комментарии и новые мессаги, приходящие с официального juick сервера. Затем по известным правилам уведомления
+            рассылаются всем заинтересованным устройствам.
+            Исключение составляют приватные сообщения. Важно понять, что подписка на произвольный тред, сделанная <u>не</u> через juick advanced,
+            <u>не будет приходить</u>, т.к. не существует способа для сторонних серверов узнавать таковые подробности с
             официального сервера для включения в свои уведомления. Ставим галочку, включаем:
             <input type="checkbox" name="prefs.enableJAMessaging" #prefs.checked.enableJAMessaging#> .
             В связи с тем, что ваши подписки на треды (и не только), сделанные через juick advanced,
