--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="com_juick">com.juickadvanced</string>
 
     <string name="Juick">Juick Advanced</string>
+    <string name="JuickMicroblog">Juick</string>
+    <string name="BNWMicroblog">BnW</string>
+    <string name="PstoMicroblog">psto.net</string>
     <string name="Loading___">Loading...</string>
     <string name="Loading___report">Loading... Complex report may take minute or two...</string>
     <string name="LoadingBackup___">Loading (backup)...</string>
@@ -651,6 +654,7 @@
 
             <b>Политика приватности.</b>
             <br>
+            <br>
 
             На сервер <b><i>juick.com</i></b> ходят следующие данные:
             <ul>
@@ -666,17 +670,20 @@
             </ul>
 
             <br>
+            <br>
             На сервер <b><i>jugregator.com</i></b> ходят запросы на срачики, без вашей жуйковской идентификации.
+            <br>
             <br>
             На сервера <b><i>проксей картинок</i></b> уходят запросы на картинки с вашей авторизацией для прокси,
             если она есть, если вы насетапили прокси для картинок.
-            <br>
-            На <b><i>XMPP/jabber сервер</i></b> уходит только ваша XMPP авторизация, если вы его включили.
 
             <br>
-            <b><i>разработчику</i></b> уходит информация о падениях программы, в том виде в котором ее отправляет
-            ACRA (тулза для отправления сообщений об ошибке), туда уходят много параметров системы, для ловли глюков.
-            <br> Кроме того, только если вы разрешили анонимную статистику, то туда же уходит, изредка:
+            <br>
+            На <b><i>Google Docs</i></b> уходит информация о падениях программы, в том виде в котором ее отправляет
+            ACRA (тулза для отправления сообщений об ошибке), туда уходят много параметров системы, полезных для обнаружения ошибок.
+            <br>
+            <br>
+             Кроме того, только если вы разрешили анонимную статистику, то на сервер <b><i>ja.ip.rt.ru</b></i> уходит 2-3 раза неделю или реже:
             <ul>
             <li>
             Уникальный номер инсталляляции, который состоит из MD5 хеша идентификатора вашего девайса
@@ -693,18 +700,24 @@
             Модель телефона, размер экрана.
             </li>
             </ul>
-            Больше ничего не отправляется. Отправляемую информацию можно посмотреть в настройках, нажав MENU.
+            Больше на эту тему ничего не отправляется.
             Отправляемые данные занимают около 1КБ.
             <br>
+            <br>
             На сервер <b><i>ja.ip.rt.ru</i></b> (Juick Advanced server, JA) уходят ваши запросы на мессаги и треды,
-             в случаях когда сервер может заменить juick.com, если вы настроили это. Для получения этой информации
+             в случаях, когда сервер может заменить juick.com, только если вы настроили это. Для получения этой информации
              туда не уходит ваша авторизация, и поэтому запросы на вашу персональную ленту сервер не обрабатывает.
-             Туда же идут запросы за графиками.<br>
+             Запросы за графиками тоже ходят туда.
+             <br>
+             <br>
             <b>НО</b> если вы используете нотификацию о сообщениях (не jabber/xmpp), тогда с целью авторизации на этом сервере
-              туда уходит ваша жуйковская авторизация. Во время логина на ja.ip.rt.ru происходит проверка на возможность
-              залогиниться на juick.com с этими данными, и затем эта информация не используется и постепенно пропадает.
-              Это нужно для того, чтобы сторонний Вася не мог назваться вами и получить сформированные для вас данные.<br>
-            <b>А</b> если вы еще и используете XMPP, то ваши jabber-пароли хранятся в ОЗУ, с целью восстановления соединения
+              туда уходит (https) ваша жуйковская авторизация. Во время логина на ja.ip.rt.ru происходит проверка на возможность
+              залогиниться на juick.com с этими данными, и затем эта информация не хранится.
+              Это нужно для того, чтобы сторонний Вася не мог назваться вами и получить сформированные для вас данные
+              (ваши подписки, и, в будущем, ваши букмарки или что там еще будет за функциональность).
+              <br>
+              <br>
+            <b>А если</b> вы еще и используете XMPP/Jabber, то ваши jabber-пароли хранятся в ОЗУ сервера, с целью восстановления соединения
             с jabber сервером, буде оно упадет. Стандартные предупреждения в таком случае звучат так: если хакеры
             взломают ja.ip.rt.ru, сделают снимок озу или стырят своп-файл, то они конечно всех поимеют. Хорошая новость
                 состоит в том, что сервер работает под управлением красноглазого gentoo, там лишь недырявая java и
@@ -888,6 +901,10 @@
     <string name="NotificationsSummary">You can enable either Non-Jabber notifications or Jabber notifications or both to receive new Juick Items. If both transports are active, duplicate notifications will be filtered.</string>
     <string name="WillCheckForNewVersion">Checking for new version...</string>
     <string name="NewVersionNotFound">No new version found</string>
+    <string name="NowUsesServerSideXMPPClient">Juick Advanced now uses server-side XMPP client. Privacy policy describes
+        its usage.
+    </string>
+    <string name="WeTurnedOffXMPP">We have disabled your XMPP connection, please re-enable it manually</string>
 
 
 </resources>
