various text changes for google play

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -301,7 +301,7 @@
                 ]]>
     </string>
 
-    <string name="rf_2012120501"><![CDATA[
+    <string name="rf_2012121903"><![CDATA[
             <html>
             <head>
             <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -314,20 +314,13 @@
             <body>
 
             <form>
-            <b>5 декабря 2012</b>
+            <b>19 декабря 2012, апокалиптический билд</b>
+            <br>Читаем всё внимательно, ОЧЕНЬ много сделано.
+            <ul>
             <li>
-            Нотификация о сообщениях <b>без XMPP/Jabber!</b>. На juick advanced сервере (не путать с официальным juick сервером) трекаются
-            все комментарии и новые мессаги, приходящие с официального juick сервера. Затем по известным правилам уведомления
-            рассылаются всем заинтересованным устройствам.
-            Исключение составляют приватные сообщения. Важно понять, что подписка на произвольный тред, сделанная <u>не</u> через juick advanced,
-            <u>не будет приходить</u>, т.к. не существует способа для сторонних серверов узнавать таковые подробности с
-            официального сервера для включения в свои уведомления. Ставим галочку, включаем:
+            Нотификация о сообщениях <b>без XMPP/Jabber!</b>. читать подробнее в конце, а также политику приватности.
+            Ставим галочку, включаем:
             <input type="checkbox" name="prefs.enableJAMessaging" #prefs.checked.enableJAMessaging#> .
-            В связи с тем, что ваши подписки на треды (и не только), сделанные через juick advanced,
-            тоже хранятся на juick advanced сервере, требуется какая-то авторизация, что ли. Для этих целей
-            вместе с вашим логином отправляется ваш авторизационный токен, который проверяется на сервере жуйка
-            во время логина на juick advanced сервер, и затем выбрасывается.
-            Всё ходит через HTTPS, подробности в политике приватности (читать её в настройках).
             </li>
             <li>
             Подписка на комментарии пользователя. Используется описанный механизм. Доступна через новое меню (см ниже).
@@ -427,6 +420,22 @@
             Создана инфраструктура графиков, и добавлено несколько графиков: активность сайта целиком, активность конкретного пользователя.
             Дальше будет больше.
             </li>
+            </ul>
+            <hr>
+            <u>Подробности про нежабберные нотификации</u>:<br>
+            На juick advanced сервере (не путать с официальным juick сервером) трекаются
+            все комментарии и новые мессаги, приходящие с официального juick сервера. Затем по известным правилам уведомления
+            рассылаются всем заинтересованным устройствам.<br>
+            Исключение составляют приватные сообщения, т.к. всё работает только по публичным.<br>
+            Важно понять, что подписка на произвольный тред, сделанная <u>не</u> через juick advanced,
+            <u>не будет приходить</u>, т.к. не существует способа для сторонних серверов узнавать таковые подробности с
+            официального сервера для включения в свои уведомления.
+            В связи с тем, что ваши подписки на треды (и не только), сделанные через juick advanced,
+            тоже хранятся на juick advanced сервере, требуется какая-то авторизация, что ли. Для этих целей
+            вместе с вашим логином отправляется ваш авторизационный токен, который проверяется на сервере жуйка
+            во время логина на juick advanced сервер, и затем выбрасывается.
+            Всё ходит через HTTPS.
+
             <hr>
             Все фичи Juick Advanced можно посмотреть в настройках, пункт \"Что Нового\".
 
