--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -289,6 +289,7 @@
     <string name="TalkingToJuBo">Общение с JuBo, ждите 10 секунд</string>
     <string name="WebSiteReturnedBad">Сайт вернул невразумительный ответ</string>
     <string name="UnableToDetectNick">Невозможно определить User Id:</string>
+    <string name="NoUserAccount">Не настроен juick account (не ставьте приложение на sdcard!)</string>
     <string name="ResizeImage">Уменьшить фотку?</string>
     <string name="Current__">Текущая:</string>
     <string name="FileSize_">Файл:</string>
