--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -790,6 +790,7 @@
     <string name="TalkingToJuBo">Talking to JuBo, please wait 10 seconds</string>
     <string name="WebSiteReturnedBad">Website returned unrecognized response</string>
     <string name="UnableToDetectNick">Unable to detect User Id:</string>
+    <string name="NoUserAccount">No juick account (dont install to SDCARD!)</string>
     <string name="ResizeImage">Resize image?</string>
     <string name="Current__">Current:</string>
     <string name="FileSize_">Filesize:</string>
